Estrutura HTML finalizada

--- a/index.html
+++ b/index.html
@@ -60,5 +60,55 @@
     <a href="#">Saiba Mais</a>
   </section>
 
+  <section>
+    <div>
+      <img src="img/botafogo.jpg" alt="Brafé Unidade Botafogo">
+      <div>
+        <h2>Botafogo</h2>
+        <p>As condições climáticas não eram as melhores nessa primeira escolha e, entre 1800 e 1850, tentou-se o cultivo.</p>
+        <a href="#">Ver Mapa</a>
+      </div>
+    </div>
+
+    <div>
+      <img src="img/iguatemi.jpg" alt="Brafé Unidade Iguatemi">
+      <div>
+        <h2>Iguatemi</h2>
+        <p>As condições climáticas não eram as melhores nessa primeira escolha e, entre 1800 e 1850, tentou-se o cultivo.</p>
+        <a href="#">Ver Mapa</a>
+      </div>
+    </div>
+
+    <div>
+      <img src="img/botafogo.jpg" alt="Brafé Unidade Botafogo">
+      <div>
+        <h2>Mineirão</h2>
+        <p>As condições climáticas não eram as melhores nessa primeira escolha e, entre 1800 e 1850, tentou-se o cultivo.</p>
+        <a href="#">Ver Mapa</a>
+      </div>
+    </div>
+  </section>
+
+  <section>
+    <div>
+      <div>
+        <h2>Assine nossa Newsletter</h2>
+        <p>Promoções e eventos mensais</p>
+      </div>
+      <form>
+        <label>E-mail</label>
+        <input type="text" placeholder="Digite seu e-mail">
+        <button type="submit">Enviar</button>
+      </form>
+    </div>
+  </section>
+
+  <footer>
+    <div>
+      <p>Este é um projeto da Origamid. Mais em origamid.com<br>Praia do Botafogo, 300, 5º andar - Botafogo - Rio de Janeiro</p>
+      <img src="img/brafe.png" alt="Brafé">
+    </div>
+  </footer>
+
 </body>
 </html>
