--- a/index.html
+++ b/index.html
@@ -7,19 +7,20 @@
   <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body> 
-  <header>
-    <div>
-      <a href="#"><img src="img/brafe.png" alt="Brafé"></a>
-    </div>
-    <nav>
-      <ul>
-        <li><a href="#">Sobre</a></li>
-        <li><a href="#">Produtos</a></li>
-        <li><a href="#">Portfólio</a></li>
-        <li><a href="#">Contato</a></li>
-      </ul>
-    </nav>
+  <header class="menu">
+    <div class="menu-container">
+      <a href="#" class="menu-logo"><img src="img/brafe.png" alt="Brafé"></a>
+      <nav class="menu-nav">
+        <ul>
+          <li><a href="#">Sobre</a></li>
+          <li><a href="#">Produtos</a></li>
+          <li><a href="#">Portfólio</a></li>
+          <li><a href="#">Contato</a></li>
+        </ul>
+      </nav>
+   </div>
   </header>
+
   <main>
     <h1>Cafés com a cara do <br>Brasil</h1>
     <p>Direto das fazendas de Minas Gerais</p>
