Duas sections adicionadas: Intro e Sobre

--- a/index.html
+++ b/index.html
@@ -21,44 +21,42 @@
    </div>
   </header>
 
-  <main>
-    <h1>Cafés com a cara do <br>Brasil</h1>
+  <main class="intro">
+    <h1>Cafés com a cara <br>do Brasil</h1>
     <p>Direto das fazendas de Minas Gerais</p>
   </main>
 
-  <section>
-    <h2>Uma mistura de</h2>
-    <div>
-      <div>
+  <section class="sobre">
+    <h2>Uma Mistura de</h2>
+    <div class="sobre-container">
+      <div class="sobre-item">
         <img src="img/cafe-1.jpg">
         <h3>amor</h3>
       </div>
-      <div>
-        <img src="img/cafe-1.jpg">
+      <div class="sobre-item">
+        <img src="img/cafe-2.jpg">
         <h3>perfeição</h3>
       </div>
     </div>
-    <p>
-        O café é uma bebida produzida a partir dos grãos torrados do fruto do cafeeiro. É servido tradicionalm aente quente, mas também pode ser consumido gelado. Ele é um estimulante, por possuir cafeína — geralmente 80 a 140 mg para cada 207 ml dependendo do método de preparação. 
-    </p>
+    <p>O café é uma bebida produzida a partir dos grãos torrados do fruto do cafeeiro. É servido tradicionalmente quente, mas também pode ser consumido gelado. Ele é um estimulante, por possuir cafeína — geralmente 80 a 140 mg para cada 207 ml dependendo do método de preparação.</p>
   </section>
 
-  <section>
-    <div>
-      <div>
-        <h2>Paulista</h2>
+  <section class="produtos">
+    <div class="produtos-container">
+      <div class="produtos-item">
+        <h2 class="produtos-paulista">Paulista</h2>
         <p>As condições climáticas não eram as melhores nessa primeira escolha e, entre 1800 e 1850, tentou-se o cultivo noutras regiões: o João Alberto Castelo Branco trouxe mudas do Pará</p>
       </div>
-      <div>
-        <h2>Carioca</h2>
+      <div class="produtos-item">
+        <h2 class="produtos-carioca">Carioca</h2>
         <p>As condições climáticas não eram as melhores nessa primeira escolha e, entre 1800 e 1850, tentou-se o cultivo noutras regiões: o João Alberto Castelo Branco trouxe mudas do Pará</p>
       </div>
-      <div>
-        <h2>Paulista</h2>
+      <div class="produtos-item">
+        <h2 class="produtos-mineiro">Mineiro</h2>
         <p>As condições climáticas não eram as melhores nessa primeira escolha e, entre 1800 e 1850, tentou-se o cultivo noutras regiões: o João Alberto Castelo Branco trouxe mudas do Pará</p>
       </div>
     </div>
-    <a href="#">Saiba Mais</a>
+    <a class="produtos-btn" href="#">Saiba Mais</a>
   </section>
 
   <section>
