Section Locais Adicionada

--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
     <a class="produtos-btn" href="#">Saiba Mais</a>
   </section>
 
-  <section>
-    <div>
+  <section class="locais">
+    <div class="locais-item">
       <img src="img/botafogo.jpg" alt="Brafé Unidade Botafogo">
       <div>
         <h2>Botafogo</h2>
@@ -69,7 +69,7 @@
       </div>
     </div>
 
-    <div>
+    <div class="locais-item">
       <img src="img/iguatemi.jpg" alt="Brafé Unidade Iguatemi">
       <div>
         <h2>Iguatemi</h2>
@@ -78,7 +78,7 @@
       </div>
     </div>
 
-    <div>
+    <div class="locais-item">
       <img src="img/botafogo.jpg" alt="Brafé Unidade Botafogo">
       <div>
         <h2>Mineirão</h2>
