Section Footer e Newsletter finalizada

--- a/index.html
+++ b/index.html
@@ -88,11 +88,11 @@
     </div>
   </section>
 
-  <section>
-    <div>
-      <div>
+  <section class = "assine">
+    <div class ="assine-container">
+      <div class ="assine-info">
         <h2>Assine nossa Newsletter</h2>
-        <p>Promoções e eventos mensais</p>
+        <p>promoções e eventos mensais</p>
       </div>
       <form>
         <label>E-mail</label>
@@ -102,8 +102,8 @@
     </div>
   </section>
 
-  <footer>
-    <div>
+  <footer class="footer">
+    <div class="footer-container">
       <p>Este é um projeto da Origamid. Mais em origamid.com<br>Praia do Botafogo, 300, 5º andar - Botafogo - Rio de Janeiro</p>
       <img src="img/brafe.png" alt="Brafé">
     </div>
